fix the problem when the conten is too large, centered with flex instead of table

--- a/main.scss
+++ b/main.scss
@@ -5,14 +5,17 @@
   left: 0;
   width: 100%;
   height: 100%;
+  overflow: auto;
   background-color: rgba(0, 0, 0, .5);
-  display: table;
   transition: opacity 0.5s ease;
 }
 
 .modal-wrapper {
-  display: table-cell;
   vertical-align: middle;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100%;
 }
 
 .modal-content {
